# kinetica-airflow

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  github_release.yml  on_push.yml  pypi_release.yml
example_dags/: kinetica_sql_example.py
kinetica_provider/: get_provider_info.py
kinetica_provider/hooks/: __init__.py  sql.py
kinetica_provider/operator/: spark.py  sql.py
